<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>FilaEDU</groupId>
	<artifactId>eduFila</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- DJL Dependencies -->
		<!-- https://mvnrepository.com/artifact/ai.djl/api -->
		<dependency>
			<groupId>ai.djl</groupId>
			<artifactId>api</artifactId>
			<version>0.31.1</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/ai.djl.tensorflow/tensorflow-engine -->
		<dependency>
			<groupId>ai.djl.tensorflow</groupId>
			<artifactId>tensorflow-engine</artifactId>
			<version>0.31.1</version>
		</dependency>

		<!--
		https://mvnrepository.com/artifact/ai.djl.tensorflow/tensorflow-model-zoo -->
		<dependency>
			<groupId>ai.djl.tensorflow</groupId>
			<artifactId>tensorflow-model-zoo</artifactId>
			<version>0.31.1</version>
		</dependency>

		<!-- OpenCV Dependency -->
		<dependency>
			<groupId>org.openpnp</groupId>
			<artifactId>opencv</artifactId>
			<version>4.8.1-0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<mainClass>tela.TelaInicial</mainClass>
					<systemProperties>
						<systemProperty>
							<key>file.encoding</key>
							<value>UTF-8</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>

